2004-06-07  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c: Intercept Linux syscalls
	through the adeos_catch_event_facility() facility, so that this
	works indifferently with both int80/sysenter ways of syscalling.

	* rtai-core/include/asm-i386/rtai_lxrt.h: Discard deprecated LXRT
	call stub.

	* rtai-core/scripts/rtai-load.in: Use modprobe -n instead of
	insmod -nq, so that we compatible with both insmod.modutils and
	newer module-init-tools.

2004-06-05  Philippe Gerum  <rpm@xenomai.org>

	* Move to GNA (http://www.gna.org/projects/rtai/).

2004-06-04  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/xenomai/mutex.c: Add blinking warning about
	kernel mutex support being deprecated in newer versions of the
	Xenomai nanokernel.

	* rtai-core/sched/xenomai/shadow.c (xnshadow_linux_sysexit):
	Always propagate sysexits whenever a signal is pending for the
	current task.

2004-06-01  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/xenomai/pod.c (xnpod_start_timer): Make sure the
	user cannot specify a host tick shorter than the timer precision.

2004-06-02  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/ipc/msg.c: fixed missing enqueuing on the return list
        for RPCing tasks that, finding the sent task ready to receive, go
        directly to RT_SCHED_RETURN state. 

2004-05-29  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/xenomai/intr.c: Add blinking warning about IST
	support being deprecated in newer versions of the Xenomai
	nanokernel.

	* rtai-core/sched/xenomai: Backport aperiodic timer fixes from the
	fusion branch.

2004-05-28  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/xenomai/pod.c (xnpod_init_thread): Make sure we
	don't accept extraneous flags for the thread.

2004-05-28  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/xenomai/shadow.c (disengage_irq_shield): Add
	missing adeos_declare_cpuid.

2004-05-28  Peter Soetens <peter.soetens@mech.kuleuven.ac.be>
	